--- a/code/SmartAgenda/src/main/resources/templates/index.html
+++ b/code/SmartAgenda/src/main/resources/templates/index.html
@@ -6,32 +6,32 @@
     <title>Title</title>
 </head>
 <body>
-<h1> Listing person from data object: </h1>
+<h1> Listing client from data object: </h1>
 <table>
     <tr>
         <th> First Name </th>
         <th> Last Name </th>
-        <th> Age </th>
+        <th> Birthdate </th>
     </tr>
-    <tr th:each="person : ${data}">
-        <td th:text ="${person.getFirstName()}"> </td>
-        <td th:text ="${person.getLastName()}"> </td>
-        <td th:text ="${person.getAge()}"> </td>
-        <td> <a th:href = "@{/delete/{firstName}(firstName =${person.getFirstName()})}"> Delete person </a></td>
+    <tr th:each="client : ${data}">
+        <td th:text ="${client.getFirstName()}"> </td>
+        <td th:text ="${client.getLastName()}"> </td>
+        <td th:text ="${client.getBirthdate()}"> </td>
+        <td> <a th:href = "@{/delete/{firstName}(firstName =${client.getFirstName()})}"> Delete client </a></td>
     </tr>
 </table></br></br></br>
 
-<form action ="#" th:action="@{/person/add}" th:object="${person}" method="post">
+<form action ="#" th:action="@{/client/add}" th:object="${client}" method="post">
     <label for="firstName"> First Name :</label><br>
     <input type="text" id="firstName" th:field="*{firstName}"> <br>
 
     <label for="lastName"> Last Name :</label><br>
     <input type="text" id="lastName" th:field="*{lastName}"> <br>
 
-    <label for="age"> Age :</label><br>
-    <input type="text" id="age" th:field="*{age}"> <br>
+    <label for="birthdate"> Birthdate :</label><br>
+    <input type="text" id="birthdate" th:field="*{birthdate}"> <br>
 
-    <input type="submit" value="Add person">
+    <input type="submit" value="Add client">
 </form>
 
 </body>
